worked on js_challenge_1

--- a/js_challenge_1/js_challenge_1.html
+++ b/js_challenge_1/js_challenge_1.html
@@ -38,7 +38,8 @@
         </p>
 
         <!--Place the picture here -->
-
+        <img src="src/cook.jpg">
         <!--Place the button here-->
+        <button>Apply!</button>
     </body>
 </html>
